fix java 8 incompatibility (string.formatted)